--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Great Britain -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: 'The Right Stuff: Some Episodes in the Career of a North Briton'
 url: http://www.gutenberg.org/ebooks/20904
